api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lnd
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sengsathit/brief-api:latest
        ports:
        - containerPort: 8000
        # --------------Accès Mysql---------------
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        
        # ----------------- Vérifie que le pod est prêt à recevoir-----------
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  namespace: lnd
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
