mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lnd
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: sengsathit/brief-mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:                 # ajout d'un volume dans le conteneur
        - mountPath: /var/lib/mysql   # chemin interne dans le conteneur
          name: mysql-pv
      volumes:                      # définition du volume réel
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: v1
kind: Service
metadata:
  namespace: lnd
  name: mysql-service
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
